# axiom

./: .gitignore  LICENSE  README.md  REVIEW.md  analysislang.cabal  axiom-analysis.cabal  debug_parser.hs  design.md  design.txt  example.sem  test_codegen.hs
.github/workflows/: ci.yml  convert_to_junit.py  test-results.yml
app/: LanguageServer.hs  Main.hs  Reporting.hs  SolverDebugger.hs
app/LanguageServer/: Diagnostics.hs  Symbols.hs
app/Latex/: Entrypoint.hs  Generator.hs  Output.hs  Unicode.hs
benchmarks/: Main.hs  STBenchmarks.hs
examples/: lambda.sem  stdlib.sem
init/std/: domains.sem
src/Data/: Graph.hs
src/Debug/: TraceExtra.hs
src/Language/: AST.hs  Axiom.hs  CodeGen.hs  ImportResolver.hs  Lexer.hs  Lexer.x  LexerOld.hs  Model.hs  Parser.hs  Parser.info  Parser.y  ParserNext.y  Range.hs  Solver.hs  SolverDebugger.hs  SolverNew.hs  TypeCheck.hs  Types.hs
src/Language/AST/: CodeGen.hs
src/Language/AST/CodeGen/: Prelude.hs
src/Language/Axiom/: Reporting.hs  Solver.hs
src/Language/Axiom/Solver/: Monad.hs
src/Language/CodeGen/: HaskellHatch.hs  Phase.hs  Prelude.hs
src/Language/Lexer/: Token.hs
src/Language/Solver/: BacktrackingST.hs  Formula.hs  Renamer.hs  Unification.hs  Worklist.hs
src/Language/TemplateHaskell/: SyntaxExtra.hs
test/: BacktrackingSTSpec.hs  CheckSmokeTestSpec.hs  CodeGenTestsSpec.hs  CommentTestsSpec.hs  ParseSmokeTestSpec.hs  ParseTestsSpec.hs  RenamerTestsSpec.hs  SolverTestsSpec.hs  TemplateHaskellSyntaxExtraSpec.hs  TestInfrastructure.hs  UnificationTestsSpec.hs
tests/: _fail_haskell_expr.sem  _fail_set_inclusion_not_a_set.sem  _fail_set_inclusion_type_error.sem  _fail_set_literals_type_mismatch.sem  _fail_type_alias_circular.sem  _fail_type_error.sem  bug_unification_types.sem  codegen_fail_test.sem  haskell_embedded_types.sem  haskell_expr.out.hs  haskell_expr.sem  import_basic.sem  list.sem  map_basic.sem  multi_consequent.sem  on_rule_activation.sem  regression_multibranch_snapshot.sem  rewrite_basic.sem  rule_names_test.sem  set_inclusion_basic.sem  set_inclusion_nested.sem  set_literals_nested.sem  set_literals_operations.sem  set_literals_types.sem  set_member.sem  set_union.sem  simple.sem  syntax_names_test.sem  transition.sem  type_alias_basic.sem  type_alias_forward_ref.sem  type_alias_nested.sem  type_alias_set.sem  typector_nested.sem  typector_simple.sem  typector_with_productions.sem  valid_simple.sem  wildcard_test.sem
tooling/: README.md
tooling/analysislang-treesitter/: binding.gyp  go.mod  grammar.js  package.json  tree-sitter.json
tooling/analysislang-treesitter/bindings/c/: tree-sitter-analysislang.pc.in
tooling/analysislang-treesitter/bindings/node/: index.js
tooling/analysislang-treesitter/bindings/python/tests/: test_binding.py
tooling/analysislang-treesitter/bindings/python/tree_sitter_analysislang/: binding.c
tooling/analysislang-treesitter/bindings/rust/: build.rs  lib.rs
tooling/analysislang-treesitter/queries/: highlights.scm  locals.scm
tooling/analysislang-treesitter/src/: grammar.json  node-types.json  parser.c
tooling/tree-sitter-analysislang/: CMakeLists.txt  Cargo.toml  Makefile  grammar.js  pyproject.toml  setup.py  tree-sitter.json
tooling/tree-sitter-analysislang/bindings/c/tree_sitter/: tree-sitter-analysislang.h
tooling/tree-sitter-analysislang/bindings/go/: binding.go  binding_test.go
tooling/tree-sitter-analysislang/bindings/node/: binding.cc
tooling/tree-sitter-analysislang/bindings/python/tree_sitter_analysislang/: __init__.py
tooling/tree-sitter-analysislang/bindings/swift/TreeSitteranalysislangTests/: TreeSitteranalysislangTests.swift
tooling/tree-sitter-analysislang/queries/: highlights.scm  indents.scm  injections.scm
tooling/tree-sitter-analysislang/src/: grammar.json  node-types.json  parser.c
tooling/tree-sitter-axiom/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tooling/tree-sitter-axiom/bindings/c/: tree-sitter-axiom.pc.in
tooling/tree-sitter-axiom/bindings/c/tree_sitter/: tree-sitter-axiom.h
tooling/tree-sitter-axiom/bindings/go/: binding.go  binding_test.go
tooling/tree-sitter-axiom/bindings/node/: binding.cc  index.js
tooling/tree-sitter-axiom/bindings/python/tests/: test_binding.py
tooling/tree-sitter-axiom/bindings/python/tree_sitter_axiom/: __init__.py  binding.c
tooling/tree-sitter-axiom/bindings/rust/: build.rs  lib.rs
tooling/tree-sitter-axiom/bindings/swift/TreeSitteraxiomTests/: TreeSitteraxiomTests.swift
tooling/tree-sitter-axiom/queries/: highlights.scm  injections.scm
tooling/tree-sitter-axiom/src/: grammar.json  node-types.json  parser.c
