name: analysislang
version: 1.0
build-type: Simple
cabal-version:>= 1.8

library
  build-depends: base >= 4 && < 5,
                 containers,
                 mtl,
                 transformers,
                 parsec,
                 lens,
                 regex-compat,
                 array,
                 extra,
                 template-haskell,
                 text,
                 neat-interpolation,
                 singletons,
                 haskell-src-meta
  build-tools: alex, happy
  exposed-modules:  Language.AST
                  , Language.CodeGen
                  , Language.Types
                  , Language.Parser
                  , Language.ParserNext
                  , Language.TypeCheck
                  , Language.Solver
                  , Language.Solver.Unification
                  , Language.Solver.Renamer
                  , Language.Solver.BacktrackingST
                  , Language.Solver.Worklist
                  , Language.CodeGen.Prelude
                  , Language.CodeGen.HaskellHatch
                  , Language.CodeGen.Phase
                  , Language.Range
                  , Language.Lexer
                  , Language.TemplateHaskell.SyntaxExtra
  other-modules:   Language.Lexer.Token
                 , Data.Graph
  extensions: TemplateHaskell
            , GeneralizedNewtypeDeriving
            , FlexibleContexts
  hs-source-dirs: src
  
executable analysislang
  build-depends: base >= 4 && < 5
              , ansi-terminal
              , analysislang
              , pretty-simple
              , containers
              , optparse-applicative
              , lsp >= 2.0 && < 3.0
              , text
              , lens
              , uri-encode
              , transformers
              , mtl
              , process
              , filepath
  other-modules: Reporting
               , LanguageServer
               , LanguageServer.Diagnostics
               , LanguageServer.Symbols
               , SolverDebugger
  hs-source-dirs: app
  main-is: Main.hs

test-suite comment-tests
  type: exitcode-stdio-1.0
  build-depends: base >= 4 && < 5
              , analysislang
              , hspec
              , HUnit
              , directory
              , filepath
              , containers
              , mtl
              , extra
              , transformers
              , template-haskell
              , temporary
              , process
  build-tool-depends: hspec-discover:hspec-discover
  other-modules: CommentTestsSpec
              , ParseSmokeTestSpec
              , ParseTestsSpec
              , CheckSmokeTestSpec
              , UnificationTestsSpec
              , RenamerTestsSpec
              , BacktrackingSTSpec
              , SolverTestsSpec
              , TemplateHaskellSyntaxExtraSpec
              , TestInfrastructure
              , CodeGenTestsSpec
  hs-source-dirs: test
  main-is: Spec.hs

benchmark benchmarks
  type: exitcode-stdio-1.0
  build-depends: base >= 4 && < 5
              , analysislang
              , criterion
              , random
  other-modules: STBenchmarks
  hs-source-dirs: benchmarks
  main-is: Main.hs
  ghc-options: -O2

